fix: Nodes table ip colum add icon
* fix: Solve review code problems

--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -141,7 +141,7 @@ $value-left: 104px;
   }
 }
 
-.appName {
+.appShow {
   .appImage {
     display: inline-block;
     float: left;
@@ -153,7 +153,7 @@ $value-left: 104px;
     display: inline-block;
     margin: 0 8px;
     font-weight: 500;
-    color: $N300
+    color: $N300;
   }
 }
 
