--- a/src/pages/Dashboard/Clusters/Detail/index.scss
+++ b/src/pages/Dashboard/Clusters/Detail/index.scss
@@ -133,6 +133,12 @@
     .eip {
       color: $N100;
     }
+
+    .icon {
+      float: left;
+      margin-top: 2px;
+      margin-right: 4px;
+    }
   }
 }
 
