--- a/src/components/Base/PopoverIcon/index.scss
+++ b/src/components/Base/PopoverIcon/index.scss
@@ -45,11 +45,12 @@
 }
 .showBorder {
   border: 1px solid $N30;
+  border-radius: 2px;
   box-shadow: 0 1px 3px 0 rgba($N400, 0.07);
 }
 
 .popover {
-  &[data-placement^="bottom"] {
+  &[data-placement^='bottom'] {
     margin-left: 0;
     margin-top: 4px;
   }
