--- a/src/components/VersionType/index.scss
+++ b/src/components/VersionType/index.scss
@@ -1,3 +1,12 @@
 .versionType {
   display: inline-block;
+
+  > label {
+    display: inline-block;
+    margin-right: 12px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
