--- a/src/pages/AppDetail/index.scss
+++ b/src/pages/AppDetail/index.scss
@@ -36,8 +36,17 @@
     .category {
       float: right;
 
-      & > label {
-        color: $N300;
+      a {
+        margin-right: 8px;
+        color: $N400;
+
+        &:last-child {
+          margin-right: 0;
+        }
+
+        &:hover {
+          color: $P75;
+        }
       }
     }
   }
@@ -75,7 +84,7 @@
   font-size: 12px;
 
   .title {
-    @include title-font;
+    @include title-font($font-size: 16px);
     margin-bottom: 12px;
   }
 
