--- a/src/pages/Dashboard/Reviews/Detail/index.scss
+++ b/src/pages/Dashboard/Reviews/Detail/index.scss
@@ -30,6 +30,14 @@
     height: 96px;
     line-height: 96px;
   }
+
+  .category {
+    margin-right: 8px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 
 .configFile {
