fix: Modal height

--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -5,11 +5,12 @@ $padding-left: 24px;
 .modal {
   position: relative;
   width: 744px;
-  max-height: 600px;
+  max-height: 67vh;
   margin: 0 auto;
   margin-top: 100px;
   background-color: $N0;
-  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06),
+    0 4px 8px 0 rgba(35, 35, 36, 0.04);
   background-color: $N0;
   outline: none;
   overflow: auto;
@@ -19,14 +20,14 @@ $padding-left: 24px;
     padding: 20px $padding-left;
     //border-bottom: 1px solid $N10;
     .title {
-     @include title-font;
+      @include title-font;
     }
     :global {
       .icon-close {
         position: absolute;
         cursor: pointer;
 
-        &:hover svg{
+        &:hover svg {
           --primary-color: #{$P75};
           --secondary-color: #{$P75};
         }
@@ -42,7 +43,7 @@ $padding-left: 24px;
     padding: 32px $padding-left;
     //border-top: 1px solid $N10;
     text-align: right;
-    .operationBtn{
+    .operationBtn {
       margin-left: 192px;
       text-align: left;
     }
