--- a/src/portals/isv/pages/Roles/Modals/index.scss
+++ b/src/portals/isv/pages/Roles/Modals/index.scss
@@ -4,7 +4,7 @@ $formLabelWidth: 100px;
 $formLabelMarginRight: 20px;
 
 .form {
-  min-height: 600px;
+  min-height: 67vh;
 }
 .fmCtrl {
   margin-bottom: 32px;
