feat: Edit role and delete role for isv

--- a/src/components/Base/Icon/index.scss
+++ b/src/components/Base/Icon/index.scss
@@ -45,7 +45,7 @@
   }
 
   .icon {
-    display: inline-block;
+    display: inline-flex;
     //font-size: $body-size;
     //vertical-align: middle;
 
