--- a/src/components/Collapse/index.scss
+++ b/src/components/Collapse/index.scss
@@ -11,6 +11,8 @@
   @include title-font;
 }
 .header {
+  display: flex;
+  align-items: center;
   flex: 1;
 }
 .cursorPointer {
@@ -20,7 +22,7 @@
 .content {
   height: 0;
   opacity: 0;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
   pointer-events: none;
 }
 
