fix: Hide action button by default

--- a/src/portals/isv/pages/Roles/index.scss
+++ b/src/portals/isv/pages/Roles/index.scss
@@ -37,6 +37,10 @@
     border-color: $P45;
     box-shadow: 0 1px 4px 0 rgba($P400, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
     background: $N0;
+
+    .actions {
+      opacity: 1;
+    }
   }
 }
 .checkedContainer {
@@ -88,6 +92,8 @@
 }
 
 .actions {
+  opacity: 0;
+  transition: 300ms all ease;
   button {
     margin-right: 12px;
   }
