--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -5,7 +5,7 @@ $padding-left: 24px;
 .modal {
   position: relative;
   width: 744px;
-  //max-height: 67vh;
+  max-height: 80vh;
   height: auto;
   margin: 0 auto;
   margin-top: 100px;
