--- a/src/components/DetailTabs/index.scss
+++ b/src/components/DetailTabs/index.scss
@@ -6,7 +6,7 @@
   background: $N0;
   border-bottom: 1px solid $N10;
 
-  >label {
+  > label {
     display: inline-block;
     padding: 16px 0;
     margin-right: 24px;
@@ -36,7 +36,7 @@
   background-color: $N500;
   border-bottom: 0 none;
 
-  >label {
+  > label {
     margin-right: 40px;
     line-height: 20px;
     padding: 0 0 11px 0;
@@ -45,7 +45,7 @@
 
     &.active {
       color: $N0;
-      border-color:$Y200;
+      border-color: $Y200;
       font-weight: 500;
     }
   }
@@ -53,4 +53,5 @@
 
 .cardTabs {
   margin: 0 -24px 24px;
+  width: 100%;
 }
