--- a/src/pages/Dashboard/Runtimes/index.scss
+++ b/src/pages/Dashboard/Runtimes/index.scss
@@ -22,7 +22,7 @@ $card-height: 188px;
       // max-width: 205px;
     }
     .page {
-      margin: 0 $body-margin - 30px;
+      // margin: 0 $body-margin - 30px;
     }
   }
 
@@ -42,7 +42,7 @@ $card-height: 188px;
     font-size: $size-medium;
     color: $N500;
     margin-bottom: $pg-margin;
-    margin-left: 102px;
+    // margin-left: 102px;
   }
 }
 
