style: Improve Create role tip

--- a/src/portals/admin/pages/Roles/index.scss
+++ b/src/portals/admin/pages/Roles/index.scss
@@ -90,6 +90,11 @@
 
 .roleSuccess {
   text-align: center;
+  @include normal-font;
+  h3 {
+    @include title-font($size-large, $size-medium);
+  }
+
   .checkedIcon {
     :global {
       svg {
