--- a/src/components/MenuLayer/index.scss
+++ b/src/components/MenuLayer/index.scss
@@ -73,6 +73,7 @@
       .devIconOuter {
         display: inline-block;
         position: relative;
+        top: -1px;
         margin-left: 4px;
         width: 12px;
         height: 12px;
