--- a/src/portals/admin/pages/Users/index.scss
+++ b/src/portals/admin/pages/Users/index.scss
@@ -62,6 +62,7 @@
     box-shadow: none;
     background: transparent;
     border: 0;
+    padding-top: 0;
   }
   .groupHeader {
     > span {
@@ -85,6 +86,9 @@
       margin-right: 4px;
     }
   }
+  .popIcon:last-child {
+    margin-right: 8px;
+  }
   .titleEventIcon {
     width: 24px;
     height: 20px;
@@ -99,9 +103,6 @@
       display: inline-flex;
     }
   }
-}
-.iconCreate {
-  margin-right: 8px;
 }
 
 .list {
