--- a/src/components/Base/PopoverIcon/index.scss
+++ b/src/components/Base/PopoverIcon/index.scss
@@ -47,6 +47,10 @@
   border: 1px solid $N30;
   border-radius: 2px;
   box-shadow: 0 1px 3px 0 rgba($N400, 0.07);
+
+  .targetLarge {
+    height: 30px;
+  }
 }
 
 .popover {
