--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -162,12 +162,12 @@
     .image {
       float: left;
       margin: 10px;
-      font-size: 16px !important;
+      // font-size: 16px !important;
       background: none;
       border: none;
     }
     span.image {
-      font-size: 16px !important;
+      // font-size: 16px !important;
       background: $N30;
       border: none;
     }
