fix: Code review

--- a/src/components/Base/Switch/index.scss
+++ b/src/components/Base/Switch/index.scss
@@ -32,6 +32,7 @@
     box-shadow: 0 1px 2px 0 rgba(33, 42, 51, 0.04),
       0 1px 1px 0 rgba(33, 42, 51, 0.04);
     transition: all $transition-speed cubic-bezier(0.78, 0.14, 0.15, 0.86);
+    cursor: pointer;
   }
 
   &.on {
