--- a/src/components/Collapse/index.scss
+++ b/src/components/Collapse/index.scss
@@ -3,6 +3,8 @@
 .container {
   border: 1px solid $N10;
   padding: 16px 24px;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .headerContainer {
