fix: Modify page styles for English

--- a/src/pages/Dashboard/Providers/CertificateInfo/index.scss
+++ b/src/pages/Dashboard/Providers/CertificateInfo/index.scss
@@ -34,12 +34,14 @@
     }
   }
 
-  &.enInfo {
-    dt {
-      width: 118px;
-    }
-    dd {
-      margin-left: 138px;
+  &.certificateInfoEn {
+    dl {
+      dt {
+        width: 130px;
+      }
+      dd {
+        margin-left: 150px;
+      }
     }
   }
 }
