--- a/src/pages/Dashboard/Reviews/Detail/index.scss
+++ b/src/pages/Dashboard/Reviews/Detail/index.scss
@@ -122,6 +122,30 @@
       }
     }
   }
+
+  &.reviewBaseEn {
+    dl {
+      dt {
+        width: 90px;
+      }
+
+      dd {
+        width: 242px;
+      }
+    }
+  }
+
+  &.reviewInfoEn {
+    dl {
+      dt {
+        width: 80px;
+      }
+
+      dd {
+        width: 250px;
+      }
+    }
+  }
 }
 
 .versionReview {
