--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -146,7 +146,8 @@
       line-height: 40px;
 
       & > span {
-        line-height: 20px;
+        padding: 0 !important;
+        line-height: 20px !important;
         vertical-align: middle;
       }
 
