refactor: Use css lang modify style

--- a/src/pages/Dashboard/Providers/CertificateInfo/index.scss
+++ b/src/pages/Dashboard/Providers/CertificateInfo/index.scss
@@ -33,8 +33,10 @@
       margin-bottom: 16px;
     }
   }
+}
 
-  &.certificateInfoEn {
+:lang(en) {
+  .certificateInfo {
     dl {
       dt {
         width: 130px;
