fix: Developer navigation app icon style (#1099)
* fix: Modify page styles for English

* fix: CheckFiles page document link translation

* refactor: Use css lang modify style

* fix: App detail page version types style

--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -147,7 +147,7 @@
 
       & > span {
         padding: 0 !important;
-        line-height: 20px;
+        line-height: 20px !important;
         vertical-align: middle;
       }
 
