--- a/src/pages/Dashboard/Reviews/Detail/index.scss
+++ b/src/pages/Dashboard/Reviews/Detail/index.scss
@@ -122,6 +122,23 @@
       }
     }
   }
+
+  &.reviewBaseEn {
+  }
+}
+
+:lang(en) {
+  .reviewInfo {
+    dl {
+      dt {
+        width: 90px;
+      }
+
+      dd {
+        width: 242px;
+      }
+    }
+  }
 }
 
 .versionReview {
