[ci skip] Fix category icon color in sass syntax

--- a/src/pages/Dashboard/Categories/index.scss
+++ b/src/pages/Dashboard/Categories/index.scss
@@ -132,7 +132,7 @@
       &:hover,
       &.active {
         opacity: 1;
-        background: #{$P10};
+        background: $P10;
         svg {
           --primary-color: #{$P300};
           --secondary-color: #{$P45};
