chore: Add English i18n translation

--- a/src/components/Base/Notification/index.scss
+++ b/src/components/Base/Notification/index.scss
@@ -8,9 +8,9 @@ $bg-error: red;
 .wrapper {
   position: fixed;
   z-index: 9999;
-  top: 100px;
+  top: 80px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   //width: 100%;
   height: auto;
 
