--- a/src/pages/Dashboard/Runtimes/index.scss
+++ b/src/pages/Dashboard/Runtimes/index.scss
@@ -310,3 +310,11 @@ $card-height: 188px;
     }
   }
 }
+
+.breadCrumb {
+  margin-bottom: 12px;
+  height: 20px;
+  line-height: 20px;
+  font-size: 12px;
+  color: $N100;
+}
