--- a/src/scss/partial/_form.scss
+++ b/src/scss/partial/_form.scss
@@ -4,3 +4,8 @@ $form-label-width: 168px;
 $form-label-margin-right: 24px;
 $form-input-normal: 256px;
 $form-input-large: 441px;
+$form-input-small: 128px;
+
+$form-label-width: 20%;
+
+$form-item-margin-left: 1.25rem;
