--- a/src/pages/Dashboard/NotificationServer/index.scss
+++ b/src/pages/Dashboard/NotificationServer/index.scss
@@ -51,26 +51,12 @@
 
 .form {
   padding: 24px;
-  label {
-    display: block;
-    margin-bottom: 8px;
-  }
   > div {
     display: flex;
-    margin-bottom: 20px;
-
-    > div {
-      margin-right: 20px;
-    }
   }
-  .paddingTop {
+  .checkbox {
     padding-top: 30px;
-  }
-  input {
-    width: 256px;
-  }
-  .smallInput {
-    width: 128px;
+    margin-left: $form-item-margin-left;
   }
 }
 
