--- a/src/scss/partial/_form.scss
+++ b/src/scss/partial/_form.scss
@@ -6,6 +6,11 @@ $form-input-normal: 256px;
 $form-input-large: 441px;
 $form-input-small: 128px;
 
-$form-label-width: 20%;
+$form-label-width: 27.58%;
 
-$form-item-margin-left: 1.25rem;
+$form-field-label-font-size: 14px;
+$form-field-label-line-height: 1.125rem;
+$form-field-gap: 1.25rem;
+
+$form-field-main-gap: 1.5rem;
+$form-field-secondary-gap: 0.5rem;
